clear notebook outputs

--- a/condition_gen2.ipynb
+++ b/condition_gen2.ipynb
@@ -423,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gen",
    "language": "python",
    "name": "python3"
   },
@@ -437,7 +437,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1a10d77370c790c63e6a9fb9f7566db4fbc58bdd39fde50f164b139058b4da37"
+   }
   }
  },
  "nbformat": 4,
